--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,9 +1,11 @@
 # see https://symfony.com/doc/current/reference/configuration/framework.html
 framework:
     secret: '%env(APP_SECRET)%'
-    #csrf_protection: true
+    #csrf_protection: false
     http_method_override: false
 
+    assets:
+        json_manifest_path: '%kernel.project_dir%/public/build/entrypoints.json'
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
     session:
